--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Advokat Pengacara Luthfi Asshiddieqy
+description: Pengacara Hukum Pidana, Perceraian, Waris, Perdata untuk Purbalingga, Purwokerto, Banyumas, Cilacap.
 author:
   name:
   email:
