--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,4 +1,4 @@
-title: Advokat Pengacara Luthfi
+title: Advokat Luthfi
 description: Working with people for over 50 years. Justice Law strives to excel for all clients in every situation.
 contact_email_address: support@advokatluthfi.com
 phone: (+62)82393395426
