--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,5 +1,5 @@
 title: Advokat <br> Luthfi
-description: Working with people for over 50 years. Justice Law strives to excel for all clients in every situation.
+description: Berkomitmen untuk memberikan layanan terbaik bagi setiap klien dalam setiap situasi.
 contact_email_address: support@advokatluthfi.com
 phone: (+62)82393395426
 address: Jl. Purbalingga - Klampok, Kedung Menjangan, Kec. Purbalingga, Kabupaten Purbalingga, Jawa Tengah 53315
