--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -10,7 +10,7 @@
       link: /contact/
     - name: Blog
       link: /blog/
-- title: Media Social
+- title: Media Sosial
   links:
     - name: Facebook
       link: http://facebook.com/cloudcannon/
