--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,4 +1,4 @@
-title: Advokat <br> Laywer <br> Luthfi
+title: Advokat <br> Lawyer <br> Luthfi
 description: Berkomitmen untuk memberikan layanan terbaik bagi setiap klien dalam setiap situasi.
 contact_email_address: support@advokatluthfi.com
 phone: (+62)82393395426
