--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Bantuan Hukum Pernikahan, Perceraian, Waris, Perdata Purbalingga, Banjarnegara, Purwokerto, Banyumas.
+title: Bantuan Hukum Proffesional
 url: "https://advokatluthfi.com"
 baseurl:
 google_analytics_key:
