feat: fix terms

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Advokat, Pengacara, Bantuan Hukum Pernikahan, Perceraian, Waris, Perdata, Pertanahan di Purbalingga, Banjarnegara, Purwokerto, Banyumas. Transparan dan berintegritas tinggi. Konsultasi pertama Anda gratis!
+description: Advokat, Pengacara, Bantuan Hukum Pernikahan, Perceraian, Waris, Perdata, Pertanahan di Purbalingga, Banjarnegara, Purwokerto, Banyumas. Transparan dan berintegritas tinggi. Konsultasi pertama Anda <b>gratis</b>!
 author:
   name:
   email:
