--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ disqus_shortname:
 logo: /siteicon.png
 description: Advokat, Pengacara, Bantuan Hukum Pernikahan, Perceraian, Waris, Perdata, Pertanahan di Purbalingga, Banjarnegara, Purwokerto, Banyumas. Transparan dan berintegritas tinggi. Konsultasi pertama Anda <b>gratis</b>!
 author:
-  name:
-  email:
+  name: Luthfi Asshiddieqy
+  email: support@advokatluthfi.com
   twitter: # twitter username without the @ symbol
 social:
   name: Justice Template
