feat: fix social link

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -13,18 +13,14 @@
 - title: Media Sosial
   links:
     - name: Facebook
-      link: http://facebook.com/cloudcannon/
+      link: https://facebook.com/luthfi.asshiddieqy/
       social_icon: Facebook
       new_window: true
-    - name: Twitter
-      link: http://twitter.com/cloudcannon
-      social_icon: Twitter
-      new_window: true
     - name: Instagram
-      link: http://instagram.com/
+      link: http://instagram.com/luthfisidd
       social_icon: Instagram
       new_window: true
     - name: LinkedIn
-      link: https://nz.linkedin.com/company/cloud-cannon/
+      link: https://www.linkedin.com/company/advokat-pengacara-luthfi/
       social_icon: LinkedIn
       new_window: true
